tests/baselines/reference/interfacedeclWithPredicatesError4.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError4.ts(5,9): error TS1005: 'String, Number, Boolean or Object type as right side' expected.


==== tests/cases/compiler/interfacedeclWithPredicatesError4.ts (1 errors) ====
    interface UsersShow{
        user_id?: number;
        screen_name?: string;
        text: string;
    } with {
            
        type(bla) == 5;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1005: 'String, Number, Boolean or Object type as right side' expected.
    }